# unknown

./: Cargo.toml
.config/: nextest.toml
.github/workflows/: rust.yml
config-examples/: project.kdl  task-template.kdl  task.kdl  workspace.kdl
sample-monorepo/: .gitignore
sample-monorepo/projects/a-lib/: project.kdl
sample-monorepo/projects/a-service/: project.kdl
sample-monorepo/tasks/: hello.nabs  hello2.nabs
src/: diagnostics.rs  git.rs  main.rs  test_files.rs
src/cli/: changed_command.rs  filters.rs  graph_command.rs  mod.rs  opts.rs  projects_command.rs  run_command.rs  tasks_command.rs
src/cli/git_commands/: mod.rs
src/cli/run_command/: child_ext.rs  mod.rs  output.rs  runner.rs
src/config/: config_source.rs  glob.rs  loader.rs  mod.rs  parsing.rs  paths.rs  project.rs  spanned.rs  tasks.rs  tests.rs  workspace.rs
src/config/loader/: mod.rs  tests.rs
src/config/loader/snapshots/: unknown__config__loader__tests__load_config_from_cwd.snap  (+5 more)
src/config/parsing/: diagnostics.rs  mod.rs  project.rs  tasks.rs  validation.rs  workspace.rs
src/config/snapshots/: unknown__config__glob__tests__decoding_globs.snap  unknown__config__tests__can_load_project_file.snap  unknown__config__tests__can_load_task_file.snap  unknown__config__tests__can_load_workspace_file.snap
src/config/validated/: mod.rs  project.rs  tasks.rs  workspace.rs
src/hashing/: mod.rs  registry.rs  tests.rs
src/workspace/: exclusions.rs  graph.rs  mod.rs  paths.rs  tests.rs
src/workspace/snapshots/: unknown__workspace__tests__snapshot_sample_monorepo.snap
tests/: changed_command.rs  config.rs  run_command.rs
tests/config-test-cases/malformed_require_target/: project.kdl
tests/config-test-cases/missing_project_file/: project.kdl
tests/config-test-cases/task_require_non_ancestor/: workspace.kdl
tests/config-test-cases/task_require_unknown_project/: project.kdl
tests/config-test-cases/task_require_unknown_tasks/: project.kdl
tests/snapshots/: config__malformed_require_target.stderr.snap  config__malformed_require_target.stdout.snap  config__missing_project_file.stderr.snap  config__task_require_non_ancestor.stderr.snap  config__task_require_unknown_project.stderr.snap  config__task_require_unknown_project.stderr.snap.new  config__task_require_unknown_tasks.stderr.snap  run_command__building_service.stdout.snap  run_command__doesnt_rerun_nested_if_inputs_unchanged.stdout.snap  run_command__failures_stop_execution.stderr.snap  run_command__failures_stop_execution.stdout.snap  run_command__filter_implicitly_set_to_current_folders_project.stdout.snap  run_command__nested_file_change_with_hashes.stdout.snap  run_command__nested_file_change_with_since.stdout.snap  run_command__no_changes_git.stdout.snap  run_command__no_hash_changes.stdout.snap
(+10 files in other folders)
