[package]
name = "unknown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
atty = "0.2.14"
blake3 = "1.3"
camino = "1.1.1"
chumsky = "0.8.0"
clap = { version = "3.2", features=["derive"] }
colored = "2.0"
futures = "0.3"
glob = "0.3"
globset = "0.4"
ignore = "0.4.18"
knuffel = "2.0"
miette = { version="4.7.1", features=["fancy"] }
petgraph = "0.6"
rayon = "1.5"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tabled = { version = "0.8.0", features=["derive"] }
thiserror = "1.0"
tokio = { version=  "1.21", features=["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
insta = "1.19"
maplit = "1.0"
rstest = "0.15.0"
similar-asserts = "1.4.2"
tempfile = "3.3"