[package]
name = "unknown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
atty = "0.2.14"
blake3 = "1.3"
camino = "1.1.1"
chumsky = "0.8.0"
clap = { version = "4", features=["derive", "wrap_help"] }
colored = "2.0"
futures = "0.3"
globset = "0.4"
ignore = "0.4.18"
knuffel = "2.0"
miette = { version="4.7.1", features=["fancy"] }
once_cell = "1.16.0"
path-clean = "0.1.0"
petgraph = "0.6"
rayon = "1.5"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tabled = { version = "0.10.0", features=["derive"] }
thiserror = "1.0"
tokio = { version=  "1.21", features=["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
assert_matches = "1.5.0"
assert_cmd = "2.0"
insta = "1.19"
maplit = "1.0"
rstest = "0.15.0"
similar-asserts = "1.4.2"
tempfile = "3.3"
unindent = "0.1.10"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and I don't rely on it for debugging that much.
debug = 0

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
